--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -7,6 +7,7 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- fadfon********************************** -->
+<!-- fadfon************************************* -->
 <style>
   :host {
     --bright-blue: oklch(51.01% 0.274 263.83);
@@ -55,6 +56,7 @@
       Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
       "Segoe UI Symbol";
   }
+  
 
   p {
     margin: 0;
