--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -8,6 +8,7 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- fadfon********************************** -->
 <!-- fadfon************************************* -->
+<!-- ddd -->
 <style>
   :host {
     --bright-blue: oklch(51.01% 0.274 263.83);
